// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screenTitle renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": 80,
        "overflow": "visible",
        "paddingBottom": 0,
        "paddingLeft": 25,
        "paddingRight": 25,
        "paddingTop": 0,
      },
      Object {},
    ]
  }
>
  <Text
    ellipsizeMode="clip"
    numberOfLines={1}
    style={
      Object {
        "color": "#aaaaaa",
        "fontSize": 100,
        "fontWeight": "bold",
        "left": 100,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": -20,
      }
    }
  >
    My screen
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#eee",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginTop": 15,
        },
        undefined,
      ]
    }
  >
    My screen
  </Text>
</View>
`;

exports[`screenTitle renders correctly without background text 1`] = `
<View
  style={
    Array [
      Object {
        "height": 80,
        "overflow": "visible",
        "paddingBottom": 0,
        "paddingLeft": 25,
        "paddingRight": 25,
        "paddingTop": 0,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#eee",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginTop": 15,
        },
        undefined,
      ]
    }
  >
    My screen
  </Text>
</View>
`;
